# AI-Resume-Analyzer

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/services/: ai_analyzer.py  pdf_parser.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Form.jsx  Header.jsx
